# dot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
specs/001-bullet-journal-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-bullet-journal-cli/checklists/: requirements.md
specs/001-bullet-journal-cli/contracts/: cli-commands.md
src/dot/: __main__.py  db.py  models.py  output.py  settings.py
src/dot/domain/: __init__.py  date_helpers.py  log_operations.py  models.py  operations.py  recurrence_operations.py  task_operations.py  validation.py
src/dot/repository/: __init__.py  abstract.py  memory.py  sqlalchemy.py  uow.py
tests/: conftest.py  test_db.py  test_orm_models.py  test_output.py  test_settings.py
tests/cli/: __init__.py  test_commands.py
tests/domain/: test_date_helpers.py  test_log_operations.py  test_models.py  test_operations.py  test_recurrence_operations.py  test_task_operations.py  test_validation.py
tests/integration/: test_workflows.py
tests/repository/: conftest.py  test_abstract.py  test_memory.py  test_sqlalchemy.py  test_uow.py
