[project]
name = "dot"
version = "0.1.0"
description = "A minimal task, event, and notes CLI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cyclopts>=4.2.1",
    "croniter>=2.0.0",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.0",
    "rich>=14.2.0",
    "whenever>=0.9.3",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.2.13",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
    "ty>=0.0.1a25",
]

[project.scripts]
dot = "dot.__main__:app"

[tool.coverage.run]
branch = true
source = ["src/dot"]
omit = [
    ".venv/*",
    "*/site-packages/*",
    "src/dot/__main__.py",
    "src/dot/db.py",
    "src/dot/settings.py",
]

[tool.coverage.report]
precision = 2
skip_covered = false
fail_under = 100

[tool.pytest.ini_options]
addopts = "--cov=src/dot --cov-report=term-missing"

